infra/k8s/carp-auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carp-auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carp-auth-mongo
  template:
    metadata:
      labels:
        app: carp-auth-mongo
    spec:
      containers:
        - name: carp-auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: carp-auth-mongo-srv
spec:
  selector:
    app: carp-auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
